# RulesMCP2

./: .gitignore  Cargo.toml  LICENSE  README.md
proj/: FIXES  PHASES  PROJECT  RULES  TODO
src/: adapter.rs  core.rs  main.rs  repo.rs  server.rs  shared.rs
