[package]
name = "rules-mcp"
version = "0.1.0"
edition = "2021"
authors = ["TwistedBrain"]
license = "EUPL-1.2"

[[bin]]
name = "rules-mcp"
path = "src/main.rs"

[dependencies]
# Note: MCP implemented as custom JSON-RPC stdio (see server.rs)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "sync", "macros", "fs"] }
git2 = "0.20"
directories = "5"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
